--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -123,6 +123,7 @@ hr {
 @import 'file-list';
 @import 'git';
 @import 'icons';
+@import 'library-list';
 @import 'lower';
 @import 'number-selector';
 @import 'pins';
