--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -1254,6 +1254,7 @@ input[type="number"] {
     float: left;
     height: 40px; }
     .toolbar > div span {
+      cursor: pointer;
       display: inline-block;
       height: 35px;
       margin-top: 3px;
@@ -1292,6 +1293,11 @@ input[type="number"] {
         background-repeat: no-repeat; }
         .toolbar > div span.scope-button:hover {
           background-image: url("../images/icons/scope_active.svg"); }
+      .toolbar > div span.shutdown {
+        background-image: url("../images/icons/shutdown_active.svg");
+        background-repeat: no-repeat; }
+        .toolbar > div span.shutdown:hover {
+          background-image: url("../images/icons/shutdown_inactive.svg"); }
   .toolbar .tool-text {
     margin-top: 3px;
     padding-left: 10px;
@@ -1327,10 +1333,10 @@ input[type="number"] {
       background-repeat: no-repeat; }
   .toolbar .logo {
     float: right;
-    min-width: 200px;
-    padding-right: 2.3em; }
+    min-width: 120px; }
     .toolbar .logo img {
-      margin-top: -14px; }
+      margin-top: -14px;
+      padding: 0; }
 
 .file-status {
   margin-left: 60px;
