FEAT: Libraries - Libraries now make best guess as to what the include will be, if there's conflicting data in the metdata file it will use that instead, if there are multiple include entries it will iterate through that too.

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -745,6 +745,9 @@ ul.libraries-list-parent {
     padding: 3px 0 3px 10px;
     width: calc(100% - 10px); }
 
+ul pre {
+  white-space: inherit; }
+
 ul dl {
   padding: 3px 0px 3px 10px; }
   ul dl dt, ul dl dd {
