--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -745,6 +745,24 @@ ul.libraries-list-parent {
     padding: 3px 0 3px 10px;
     width: calc(100% - 10px); }
 
+ul .copy {
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none; }
+  ul .copy:hover {
+    text-decoration: underline; }
+
+ul .hide-include {
+  border: none;
+  height: 0;
+  margin: 0;
+  overflow: hidden;
+  position: absolute;
+  resize: none;
+  width: 0; }
+
 ul pre {
   white-space: inherit; }
 
