FEAT: Editor Loading Improvements - Hide all media types by default, toggle visibility with classes rather than writing the styles into the browser and also centred the audio element

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -97,10 +97,25 @@ img {
   width: 100%;
   z-index: 97; }
 
+#editor {
+  display: none; }
+  #editor.active {
+    display: block; }
+
+#audio-parent,
+#img-display-parent {
+  display: none; }
+  #audio-parent.active,
+  #img-display-parent.active {
+    display: block; }
+
 #pd-svg-parent {
   background: #fff;
+  display: none;
   font-family: monospace;
   overflow: auto; }
+  #pd-svg-parent.active {
+    display: block; }
 
 /* CONTAINER FOR LOWER ELEMENTS */
 .activeBar {
