--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -77,10 +77,29 @@ img {
 	z-index: 97;
 }
 
+#editor {
+  display: none;
+  &.active {
+    display: block;
+  }
+}
+
+#audio-parent,
+#img-display-parent {
+  display: none;
+  &.active {
+    display: block;
+  }
+}
+
 #pd-svg-parent {
   background: #fff;
+  display: none;
   font-family: monospace;
   overflow: auto;
+  &.active {
+    display: block;
+  }
 }
 
 /* CONTAINER FOR LOWER ELEMENTS */
