FEAT: Error Popups - Errors, unstyled as they are, now are pushed to the user in console and in a popup

--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -837,7 +837,9 @@ img.explorer {
   display: none;
   left: calc((100% / 2) - 300px);
   margin-bottom: 10px;
+  max-height: 60vh;
   min-height: 100px;
+  overflow-y: auto;
   padding: 4em;
   position: absolute;
   top: calc((100% / 2) - 300px);
