--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -850,9 +850,13 @@ img.explorer {
     display: inline;
     z-index: 9999; }
   #popup h1 {
+    color: #00bea4;
     font-size: 2em;
-    font-family: space_bold;
-    color: #00bea4; }
+    font-family: space_bold; }
+  #popup h3 {
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 1em;
+    font-family: space_bold; }
   #popup p, #popup form {
     color: #999;
     font-family: poppins_light;
@@ -860,8 +864,8 @@ img.explorer {
     margin-bottom: 10px; }
   #popup input {
     font-size: 1em;
-    padding: .5em;
-    line-height: 1em; }
+    line-height: 1em;
+    padding: .5em; }
     #popup input[type=text] {
       margin-top: 1em;
       width: 15em; }
@@ -873,28 +877,28 @@ img.explorer {
       color: #bdbdbd;
       font-style: italic; }
   #popup .radio-container {
-    display: block;
-    position: relative;
-    padding-left: 2em;
     cursor: pointer;
+    display: block;
+    padding-left: 2em;
+    position: relative;
     -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none; }
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none; }
   #popup .radio-container input {
-    position: absolute;
+    cursor: pointer;
     opacity: 0;
-    cursor: pointer; }
+    position: absolute; }
   #popup .radio-button {
+    background-color: #bdbdbd;
+    border-radius: 50%;
+    height: 1em;
+    left: 0;
+    margin-top: .25em;
+    opacity: 0.5;
     position: absolute;
     top: 0;
-    left: 0;
-    height: 1em;
-    width: 1em;
-    background-color: #bdbdbd;
-    opacity: 0.5;
-    border-radius: 50%;
-    margin-top: .25em; }
+    width: 1em; }
   #popup .radio-container:hover input ~ .radio-button {
     opacity: 1; }
   #popup .radio-container input:checked ~ .radio-button {
@@ -902,17 +906,17 @@ img.explorer {
     opacity: 1; }
   #popup button {
     float: right;
-    margin-top: .5em;
     font-size: 1em;
-    padding: .5em 2em;
-    margin-left: .75em; }
+    margin-left: .75em;
+    margin-top: .5em;
+    padding: .5em 2em; }
     #popup button.confirm {
-      border: 1px solid #1ce8b5;
       background: #1ce8b5;
+      border: 1px solid #1ce8b5;
       color: rgba(0, 0, 0, 0.8); }
       #popup button.confirm:hover {
-        border: 1px solid #63ffd9;
-        background: #63ffd9; }
+        background: #63ffd9;
+        border: 1px solid #63ffd9; }
     #popup button.cancel {
       background: #ffffff;
       border: 1px solid #bdbdbd; }
@@ -920,8 +924,8 @@ img.explorer {
         background: #e5e5e5;
         color: rgba(0, 0, 0, 0.8); }
     #popup button.delete {
-      border: 1px solid #FF918E;
       background-color: #FF918E;
+      border: 1px solid #FF918E;
       color: rgba(0, 0, 0, 0.8); }
       #popup button.delete:hover {
         background-color: #ff5e5b;
