--- a/ide-redesign/styles/_popup.scss
+++ b/ide-redesign/styles/_popup.scss
@@ -16,10 +16,15 @@
     z-index: 9999;
   }
   h1 {
-      font-size: 2em;
-      font-family: space_bold;
-      color: $teal-main;
-    }
+    color: $teal-main;
+    font-size: 2em;
+    font-family: space_bold;
+  }
+  h3 {
+    color: $grey-dark;
+    font-size: 1em;
+    font-family: space_bold;
+  }
   & p, & form {
     color: #999;
     font-family: poppins_light;
@@ -28,13 +33,12 @@
   }
   input {
     font-size: 1em;
-    padding: .5em;
     line-height: 1em;
+    padding: .5em;
     &[type=text] {
       margin-top: 1em;
       width: 15em;
     }
-
     &[type=file]{
       background: initial;
       border: initial;
@@ -47,30 +51,27 @@
   }
   /* Styles for custom radio buttons */
   .radio-container {
-    display: block;
-    position: relative;
-    padding-left: 2em;
     cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+    display: block;
+    padding-left: 2em;
+    position: relative;
     user-select: none;
   }
   .radio-container input {
-    position: absolute;
-    opacity: 0;
     cursor: pointer;
+    opacity: 0;
+    position: absolute;
   }
   .radio-button {
+    background-color: $grey-mid;
+    border-radius: 50%;
+    height: 1em;
+    left: 0;
+    margin-top: .25em;
+    opacity: 0.5;
     position: absolute;
     top: 0;
-    left: 0;
-    height: 1em;
     width: 1em;
-    background-color: $grey-mid;
-    opacity: 0.5;
-    border-radius: 50%;
-    margin-top: .25em;
   }
   .radio-container:hover input ~ .radio-button {
     opacity: 1;
@@ -83,18 +84,17 @@
   /* Styles for custom UI buttons for popups */
   button {
     float: right;
-    margin-top: .5em;
     font-size: 1em;
-    padding: .5em 2em;
     margin-left: .75em;
+    margin-top: .5em;
+    padding: .5em 2em;
     &.confirm {
-      border: 1px solid $teal-01;
       background: $teal-01;
+      border: 1px solid $teal-01;
       color: $grey-dark;
       &:hover {
-        border: 1px solid $teal-02;
         background: $teal-02;
-
+        border: 1px solid $teal-02;
       }
     }
     &.cancel {
@@ -106,8 +106,8 @@
       }
     }
     &.delete {
-      border: 1px solid $accent-red-fade;
       background-color: $accent-red-fade;
+      border: 1px solid $accent-red-fade;
       color: $grey-dark;
       &:hover {
         background-color: $accent-red;
