FEAT: PD Background - Changed PD to grey background

--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -97,6 +97,9 @@ img {
   display: none;
   font-family: monospace;
   overflow: auto;
+  #pd-svg {
+    background: $grey-light;
+  }
   &.active {
     display: block;
   }
