--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -114,6 +114,8 @@ img {
   display: none;
   font-family: monospace;
   overflow: auto; }
+  #pd-svg-parent #pd-svg {
+    background: #f1f1f1; }
   #pd-svg-parent.active {
     display: block; }
 
