--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -250,6 +250,52 @@ button,
     border-top: rgba(0, 0, 0, 0.1);
     color: rgba(0, 0, 0, 0.9); }
 
+input[type="range"].range-slider {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background: transparent;
+  margin: 0 auto;
+  padding: 3px 0;
+  width: 80%;
+  -webkit-transition: .25s, ease-in-out;
+  transition: .25s, ease-in-out; }
+  input[type="range"].range-slider::-webkit-slider-runnable-track {
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 9px;
+    cursor: pointer;
+    height: 20px;
+    padding: 2px 2px 2px 2px; }
+  input[type="range"].range-slider::-webkit-slider-thumb {
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    appearance: none;
+    -webkit-appearance: none;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 8px;
+    cursor: pointer;
+    height: 16px;
+    margin-top: 0px;
+    -webkit-transition: .25s, ease-in-out;
+    transition: .25s, ease-in-out;
+    width: 16px; }
+  input[type="range"].range-slider:hover::-webkit-slider-runnable-track, input[type="range"].range-slider:active::-webkit-slider-runnable-track {
+    background: #1ce8b5;
+    -webkit-transition: background, 100ms, ease-in-out;
+    transition: background, 100ms, ease-in-out; }
+    input[type="range"].range-slider:hover::-webkit-slider-runnable-track::-webkit-slider-thumb, input[type="range"].range-slider:active::-webkit-slider-runnable-track::-webkit-slider-thumb {
+      margin-top: 0; }
+  input[type="range"].range-slider:hover::-webkit-slider-thumb, input[type="range"].range-slider:active::-webkit-slider-thumb {
+    background-color: #ffffff;
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5); }
+  input[type="range"].range-slider:disabled::-webkit-slider-runnable-track {
+    background: rgba(0, 0, 0, 0.2); }
+  input[type="range"].range-slider:disabled::-webkit-slider-thumb {
+    background: rgba(255, 255, 255, 0.2);
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4); }
+
 #beaglert-console {
   background-color: white;
   -webkit-box-sizing: border-box;
@@ -767,42 +813,36 @@ img.explorer {
 
 #popup {
   background: white;
-  border: 2px solid #666;
-  border-radius: 10px;
+  border: 1px solid #bdbdbd;
   display: none;
-  font-size: 14px;
-  left: calc((100% / 2) - 200px);
+  left: calc((100% / 2) - 300px);
   margin-bottom: 10px;
   min-height: 100px;
-  padding: 0 20px 30px;
+  padding: 4em;
   position: absolute;
-  top: calc((100% / 2) - 150px);
-  width: 400px; }
+  top: calc((100% / 2) - 300px);
+  width: 600px;
+  /* Styles for custom radio buttons */
+  /* Styles for custom UI buttons for popups */ }
   #popup.active {
     display: inline;
     z-index: 9999; }
   #popup h1 {
-    color: #82C889;
-    font-family: sofia;
-    font-size: 25px;
-    line-height: 30px;
-    margin: 20px 0; }
+    font-size: 2em;
+    font-family: space_bold;
+    color: #00bea4; }
   #popup p, #popup form {
     color: #999;
-    font-family: sofia;
-    font-size: 14px;
+    font-family: poppins_light;
+    font-size: 1em;
     margin-bottom: 10px; }
   #popup input {
-    font-size: 16px;
-    padding: 10px; }
+    font-size: 1em;
+    padding: .5em;
+    line-height: 1em; }
     #popup input[type=text] {
-      margin: 10px 0 20px;
-      width: 250px; }
-    #popup input[type=checkbox], #popup input[type=radio] {
-      margin: 2px 10px;
-      position: relative;
-      top: 5px;
-      width: initial; }
+      margin-top: 1em;
+      width: 15em; }
     #popup input[type=file] {
       background: initial;
       border: initial;
@@ -810,9 +850,53 @@ img.explorer {
     #popup input::-webkit-input-placeholder {
       color: #bdbdbd;
       font-style: italic; }
+  #popup .radio-container {
+    display: block;
+    position: relative;
+    padding-left: 2em;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; }
+  #popup .radio-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer; }
+  #popup .radio-button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1em;
+    width: 1em;
+    background-color: #bdbdbd;
+    opacity: 0.5;
+    border-radius: 50%;
+    margin-top: .25em; }
+  #popup .radio-container:hover input ~ .radio-button {
+    opacity: 1; }
+  #popup .radio-container input:checked ~ .radio-button {
+    background-color: #1ce8b5;
+    opacity: 1; }
   #popup button {
     float: right;
-    margin: 10px 5px 0; }
+    margin-top: .5em;
+    font-size: 1em;
+    padding: .5em 2em;
+    margin-left: .75em; }
+    #popup button.confirm {
+      border: 1px solid #1ce8b5;
+      background: #1ce8b5;
+      color: rgba(0, 0, 0, 0.8); }
+      #popup button.confirm:hover {
+        border: 1px solid #63ffd9;
+        background: #63ffd9; }
+    #popup button.cancel {
+      background: #ffffff;
+      border: 1px solid #bdbdbd; }
+      #popup button.cancel:hover {
+        background: rgba(0, 0, 0, 0.2);
+        color: rgba(0, 0, 0, 0.8); }
 
 ::-webkit-scrollbar {
   width: 12px; }
@@ -1248,3 +1332,132 @@ input[type="number"] {
     color: rgba(0, 0, 0, 0.7);
     padding-right: 20px;
     font-size: 14px; }
+
+.scopeWrapper {
+  position: relative; }
+  .scopeWrapper canvas {
+    left: 0;
+    position: absolute;
+    top: 0; }
+
+.buttonWrapper {
+  left: 0;
+  padding: 10px 20px;
+  position: absolute;
+  top: 0;
+  width: calc(100vw - 40px);
+  z-index: 100; }
+  .buttonWrapper .top {
+    display: inline-block; }
+    .buttonWrapper .top .label p {
+      display: inline; }
+    .buttonWrapper .top .value {
+      display: inline-block; }
+
+#control-panel {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid #f1f1f1;
+  left: 50px;
+  padding: 2em 0 2em 2em;
+  position: absolute;
+  top: 50px;
+  z-index: 9999; }
+  #control-panel * {
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none; }
+  #control-panel.hidden {
+    display: none; }
+  #control-panel .control-panel-column {
+    border-right: 1px dashed #bdbdbd;
+    display: inline-block;
+    float: left;
+    padding: .5em 1.5em .5em 3em;
+    width: 375px; }
+    #control-panel .control-panel-column.channels {
+      border: 0;
+      display: inline-block;
+      padding: .5em 3em .5em 1.5em;
+      vertical-align: top; }
+  #control-panel .control-section {
+    vertical-align: top; }
+    #control-panel .control-section h3 {
+      color: rgba(0, 0, 0, 0.8);
+      font-family: space_bold;
+      font-size: 1.2em;
+      -webkit-margin-after: .75em;
+              margin-block-end: .75em;
+      -webkit-margin-before: 1em;
+              margin-block-start: 1em; }
+    #control-panel .control-section .block-section p {
+      display: inline;
+      font-family: poppins_regular;
+      font-size: .85em; }
+    #control-panel .control-section .block-section div span p {
+      font-family: inconsolata;
+      font-size: 1em; }
+    #control-panel .control-section .block-section .scope-label {
+      display: inline-block;
+      margin: 5px 0;
+      width: 75px;
+      text-align: right; }
+    #control-panel .control-section .block-section .scope-input {
+      display: inline-block;
+      margin: 2px 0;
+      padding-left: 60px;
+      position: absolute;
+      width: 200px; }
+      #control-panel .control-section .block-section .scope-input > .mini-dropdown {
+        width: 100px; }
+        #control-panel .control-section .block-section .scope-input > .mini-dropdown:before {
+          left: 140px; }
+    #control-panel .control-section .block-section .after-dropdown {
+      display: inline;
+      margin-left: 165px; }
+    #control-panel .control-section .block-section.slider-line {
+      margin-top: .5em; }
+
+.number-box[type=number] {
+  border: 0;
+  font-family: inconsolata;
+  font-size: 1em;
+  line-height: .5em;
+  text-align: right;
+  width: 2.5em; }
+  .number-box[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+            appearance: none; }
+
+input.scope-controls.range-slider {
+  padding-left: .5em;
+  width: 100%; }
+
+input.channelView.range-slider {
+  padding-left: .5em;
+  width: 100%; }
+
+.slider {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  vertical-align: middle; }
+  .slider.label {
+    text-align: right;
+    width: 100px; }
+  .slider.value {
+    text-align: left; }
+    .slider.value.ms {
+      padding-right: 5px;
+      text-align: right;
+      width: 40px; }
+    .slider.value.colour {
+      margin-left: 55px; }
+  .slider.range {
+    width: 200px; }
+
+#scope-drop {
+  width: 110px; }
+
+.one-shot {
+  padding-left: 135px; }
