--- a/ide-redesign/styles/_dropdown-mini.scss
+++ b/ide-redesign/styles/_dropdown-mini.scss
@@ -1,73 +1,57 @@
-// .dropdown-num select {
-//     width: 80px;
-//     background: transparent;
-//     font-family: poppins_light;
-//     appearance: none;
-//     -moz-appearance: none;
-//     -webkit-appearance: none;
-//     padding-left: 10px;
-// }
-
 .mini-dropdown select {
-    border: transparent;
-    height: 25px;
-    width: 72px;
-    padding-left: 10px;
-    background: transparent;
-    font-family: poppins_light;
-    -webkit-appearance: button;
-    vertical-align: center;
-    .git {
-        width: 150px;
-        display: inline;
-            }
-    &.inactive {
-        border: 1px solid $grey-mid;
-        background: $grey-light;
-    }
-
+  border: transparent;
+  height: 25px;
+  width: 105px;
+  padding-left: 10px;
+  background: transparent;
+  font-family: poppins_light;
+  -webkit-appearance: button;
+  vertical-align: center;
+  option {
+    width: 100%;
+  }
+  .git {
+    width: 150px;
+    display: inline;
+  }
+  &.inactive {
+    border: 1px solid $grey-mid;
+    background: $grey-light;
+  }
 }
 
 .mini-dropdown {
-    height: 23px;
-    width: 72px;
-    border-radius: 2px;
-    border: 1px solid $teal-main;
-    display: block;
-    &:before,
-    &:after {
-      content: "";
-      position: absolute;
-      pointer-events: none;
-}
-    
-    &:before {
-        position:absolute;
-        content:" ";
-        border: 6px solid transparent;
-        border-top: 6px solid $teal-main;
-        top: 10px;
-        left: 62px;
-    }
+  border: 1px solid $teal-main;
+  border-radius: 2px;
+  display: block;
+  height: 23px;
+  position: relative;
+  min-width: 105px;
+  &:before,
+  &:after {
+    content: "";
+    pointer-events: none;
+    position: absolute;
+  }
+  &:before {
+    content:" ";
+    border: 6px solid transparent;
+    border-top: 6px solid $teal-main;
+    right: 5px;
+    position: absolute;
+    top: 10px;
+  }
 }
 
 // DISABLED DROPDOWNS
-
 .mini-dropdown.disabled {
-    background-color: $grey-light;
-    color: rgba(0,0,0,.7);
-    border: 1px solid $grey-mid;
-        &:before {
-          border-top: 6px solid $grey-mid;
-        }
-        &:after {
-          color: rgba(0,0,0,.4);
-        }
+  background-color: $grey-light;
+  border: 1px solid $grey-mid;
+  color: rgba(0,0,0,.7);
+  &:before {
+    border-top: 6px solid $grey-mid;
+  }
+  &:after {
+    color: rgba(0,0,0,.4);
+  }
 }
-
-
-
-// .mini-dropdown select[disabled]::after {
-//   color: rgba(0,0,0,.1);
-// }
-
