--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -161,7 +161,7 @@ button.accordion {
     background: #bdbdbd;
     border-bottom: 2px solid #00bea4; }
   button.accordion.active {
-    background-color: #ffffff;
+    background-color: #f1f1f1;
     border-bottom: 2px solid #00bea4;
     color: rgba(0, 0, 0, 0.8);
     padding: 8px 14px; }
@@ -201,10 +201,8 @@ button.accordion-sub {
   max-height: 0;
   opacity: 0;
   overflow: hidden;
-  -webkit-transition: 0.2s ease-in-out;
-  transition: 0.2s ease-in-out;
-  -webkit-transition-delay: 0.4s;
-          transition-delay: 0.4s; }
+  -webkit-transition: 0.2s ease;
+  transition: 0.2s ease; }
   .docs-content.show {
     max-height: 100000px;
     /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
@@ -215,9 +213,7 @@ button.accordion-sub {
   opacity: 0;
   overflow: hidden;
   -webkit-transition: 0.2s ease-in-out;
-  transition: 0.2s ease-in-out;
-  -webkit-transition-delay: 0.4s;
-          transition-delay: 0.4s; }
+  transition: 0.2s ease-in-out; }
 
 .panel.show {
   max-height: 100000px;
@@ -1259,6 +1255,10 @@ input[type="number"] {
   -webkit-animation: running-button 2s linear infinite;
           animation: running-button 2s linear infinite; }
 
+.building-button {
+  -webkit-animation: running-button 3s linear infinite;
+          animation: running-button 3s linear infinite; }
+
 .toolbar {
   background: #c9c9c9;
   bottom: 0;
@@ -1290,6 +1290,10 @@ input[type="number"] {
         background-repeat: no-repeat; }
         .toolbar > div span.run:hover {
           background-image: url("../images/icons/run_inactive.svg"); }
+        .toolbar > div span.run.building {
+          background-image: url("../images/icons/run_building.svg"); }
+        .toolbar > div span.run.running {
+          background-image: url("../images/icons/run_running.svg"); }
       .toolbar > div span.stop {
         background-image: url("../images/icons/stop_active.svg");
         background-repeat: no-repeat;
@@ -1318,7 +1322,7 @@ input[type="number"] {
         .toolbar > div span.scope-button:hover {
           background-image: url("../images/icons/scope_active.svg"); }
       .toolbar > div span.shutdown {
-        background-image: url("../images/icons/shutdown_inactive.svg");
+        background-image: url("../images/icons/shutdown_active.svg");
         background-repeat: no-repeat;
         margin-left: 5px; }
         .toolbar > div span.shutdown:hover {
@@ -1339,7 +1343,8 @@ input[type="number"] {
     width: 85px; }
   .toolbar .shutdown-parent {
     float: right;
-    width: 45px; }
+    width: 45px;
+    padding-right: 50px; }
   .toolbar .toolbar-functions {
     padding: 2px 0; }
   .toolbar .system-status-text {
