--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -114,7 +114,7 @@ img {
   display: none;
   font-family: monospace;
   overflow: auto; }
-  #pd-svg-parent #pd-svg {
+  #pd-svg-parent #pd-svg svg {
     background: #f1f1f1; }
   #pd-svg-parent.active {
     display: block; }
