--- a/ide-redesign/styles/_upper.scss
+++ b/ide-redesign/styles/_upper.scss
@@ -4,16 +4,18 @@
   .project,
   .file,
   .status {
-    display: inline-block;
-    padding-top:10px;
-    font-family: space_regular;
-    font-size: 16px;
     color: $teal-main;
+    display: inline-block;
+    font-family: space_regular;
+    font-size: 12px;
+    margin-top: 0;
+    padding-bottom: 5px;
+    padding-top: 5px;
   }
   .current {
     font-family: poppins_regular;
     color: rgba(0, 0, 0, 0.7);
     padding-right: 20px;
-    font-size: 14px;
+    font-size: 12px;
   }
 }
