Added sticky styling to fix titles with scrolling
(cherry picked from commit 582a593a65f86c5c1bf09ba84d65e4b07279c140)

--- a/ide-redesign/styles/_tabs.scss
+++ b/ide-redesign/styles/_tabs.scss
@@ -41,8 +41,14 @@ section#tab-content {
     display: none;
   }
   .title-container {
-    display: block;
+    background-color: $white;
+    position: sticky;
+    position: -webkit-sticky; /* Required for Safari */
+    height: 75px;
     margin: 0;
+    top: 0;
+    z-index: 100;
+    width: 100%;
     hr {
       background: transparent;
     }
