FIX: PD Background Colours - SVG, SVG PD container and SVG PD container parent are all the same colour grey now

--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -96,12 +96,15 @@ img {
 }
 
 #pd-svg-parent {
-  background: #fff;
+  background: #f1f1f1;
   display: none;
   font-family: monospace;
   overflow: auto;
   #pd-svg {
-    background: $grey-light;
+    background: #f1f1f1;
+    svg {
+      background: #f1f1f1;
+    }
   }
   &.active {
     display: block;
