--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -112,12 +112,14 @@ img {
     display: block; }
 
 #pd-svg-parent {
-  background: #fff;
+  background: #f1f1f1;
   display: none;
   font-family: monospace;
   overflow: auto; }
   #pd-svg-parent #pd-svg {
     background: #f1f1f1; }
+    #pd-svg-parent #pd-svg svg {
+      background: #f1f1f1; }
   #pd-svg-parent.active {
     display: block; }
 
