FIX: Find and Replace - I don't like this fix but in the interim whilst I search for a reasonable functional replacement this positions the find and replace search box where it's furthest left position will be in the animation cycle.

--- a/ide-redesign/styles/base.scss
+++ b/ide-redesign/styles/base.scss
@@ -85,12 +85,13 @@ img {
   }
   .ace_search {
     &.right {
-      right: 60px;
+      // right: 60px;
+      right: 448px;
       transition: 0.5s ease-in-out;
     }
-    &.active {
-      right: 448px;
-    }
+    // &.active {
+    //   right: 448px;
+    // }
   }
 }
 
