--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -576,13 +576,13 @@ input[type="range"].range-slider {
 /* Dropdown Button */
 button.dropbtn {
   background-color: #fff;
-  border: none;
+  border: 1px solid #00bea4;
   color: #00bea4;
   cursor: pointer;
   display: inline;
   font-family: poppins_regular;
   font-size: 14px;
-  padding: 6px 16px;
+  padding: 7px 16px;
   position: relative;
   text-align: left;
   width: 200px; }
@@ -1115,8 +1115,15 @@ section#tab-content {
   section#tab-content .tab-info {
     display: none; }
   section#tab-content .title-container {
-    display: block;
-    margin: 0; }
+    background-color: #ffffff;
+    position: sticky;
+    position: -webkit-sticky;
+    /* Required for Safari */
+    height: 75px;
+    margin: 0;
+    top: 0;
+    z-index: 100;
+    width: 100%; }
     section#tab-content .title-container hr {
       background: transparent; }
     section#tab-content .title-container h1 {
@@ -1560,13 +1567,18 @@ input[type="number"] {
     .buttonWrapper .top .value {
       display: inline-block; }
 
+button.scope-controls {
+  padding: .3em .7em; }
+  button.scope-controls.export {
+    margin-top: .3em; }
+
 #control-panel {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.9);
   border: 1px solid #f1f1f1;
   left: 50px;
   padding: 2em 0 2em 2em;
   position: absolute;
-  top: 50px;
+  top: 55px;
   z-index: 9999; }
   #control-panel * {
     -webkit-user-select: none;
@@ -1605,7 +1617,7 @@ input[type="number"] {
       font-size: 1em; }
     #control-panel .control-section .block-section .scope-label {
       display: inline-block;
-      margin: 5px 0;
+      margin: 3px 0;
       width: 75px;
       text-align: right; }
     #control-panel .control-section .block-section .scope-input {
@@ -1616,13 +1628,9 @@ input[type="number"] {
       width: 200px; }
       #control-panel .control-section .block-section .scope-input > .mini-dropdown {
         width: 100px; }
-        #control-panel .control-section .block-section .scope-input > .mini-dropdown:before {
-          left: 140px; }
     #control-panel .control-section .block-section .after-dropdown {
       display: inline;
       margin-left: 165px; }
-    #control-panel .control-section .block-section.slider-line {
-      margin-top: .5em; }
 
 .number-box[type=number] {
   border: 0;
@@ -1670,3 +1678,52 @@ input.channelView.range-slider {
 
 .one-shot {
   padding-left: 135px; }
+
+.label {
+  font-family: inconsolata;
+  size: 0.85em; }
+
+input[type="range"].scope-range-slider {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background: transparent;
+  margin: 1 auto 0 auto;
+  width: 100%;
+  -webkit-transition: .25s, ease-in-out;
+  transition: .25s, ease-in-out; }
+  input[type="range"].scope-range-slider::-webkit-slider-runnable-track {
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 9px;
+    cursor: pointer;
+    height: 15px;
+    padding: 2px 2px 2px 2px; }
+  input[type="range"].scope-range-slider::-webkit-slider-thumb {
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    appearance: none;
+    -webkit-appearance: none;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 8px;
+    cursor: pointer;
+    height: 12px;
+    margin-top: -1px;
+    -webkit-transition: .25s, ease-in-out;
+    transition: .25s, ease-in-out;
+    width: 12px; }
+  input[type="range"].scope-range-slider:hover::-webkit-slider-runnable-track, input[type="range"].scope-range-slider:active::-webkit-slider-runnable-track {
+    background: #1ce8b5;
+    -webkit-transition: background, 100ms, ease-in-out;
+    transition: background, 100ms, ease-in-out; }
+    input[type="range"].scope-range-slider:hover::-webkit-slider-runnable-track::-webkit-slider-thumb, input[type="range"].scope-range-slider:active::-webkit-slider-runnable-track::-webkit-slider-thumb {
+      margin-top: 0; }
+  input[type="range"].scope-range-slider:hover::-webkit-slider-thumb, input[type="range"].scope-range-slider:active::-webkit-slider-thumb {
+    background-color: #ffffff;
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5); }
+  input[type="range"].scope-range-slider:disabled::-webkit-slider-runnable-track {
+    background: rgba(0, 0, 0, 0.2); }
+  input[type="range"].scope-range-slider:disabled::-webkit-slider-thumb {
+    background: rgba(255, 255, 255, 0.2);
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4);
+            box-shadow: 0 1px 4px rgba(0, 0, 0, 0.4); }
