--- a/IDE/public/css/style.css
+++ b/IDE/public/css/style.css
@@ -102,9 +102,11 @@ img {
   #editor.active {
     display: block; }
   #editor .ace_search.right {
-    right: 448px;
+    right: 60px;
     -webkit-transition: 0.5s ease-in-out;
     transition: 0.5s ease-in-out; }
+  #editor .ace_search.active {
+    right: 448px; }
 
 #audio-parent,
 #img-display-parent {
