Printing library description at top of library tab, styled

--- a/ide-redesign/styles/_library-list.scss
+++ b/ide-redesign/styles/_library-list.scss
@@ -3,6 +3,12 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    .library-desc {
+      > p {
+        margin-block-start: 0;
+        font-family: poppins;
+        }
+    }
     .libraries-list {
       li {
         color: rgba(0, 0, 0, 0.8);
